--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "jwchan <741755613@qq.com>",
   "main": "index.js",
   "dependencies": {
+    "async-validator": "^3.5.1",
     "element-ui": "^2.4.5"
   },
   "devDependencies": {
